--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -14,17 +14,36 @@
   transition: 75ms ease-in-out;
 }
 
+.content-header {
+  height: 52px;
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  h2 {
+    padding-left: 16px;
+    margin: 0px;
+  }
+}
+
 .allThreads {
-  height: calc(100% - 172px);
+  height: calc(100% - 202px);
+  padding-top: 20px;
   overflow: auto;
   scroll-behavior: smooth;
 }
 
 .thread {
   position: relative;
-  border-top: solid 1px rgba(0, 0, 0, 0.2);
-  padding: 16px 32px;
-  margin-block: 16px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+
+  &:hover {
+    background-color: rgb(235, 235, 235);
+  }
 }
 
 .thread-date {
@@ -35,7 +54,7 @@
 
   width: 100px;
   height: 28px;
-  border: solid 1px rgba(0, 0, 0, 0.4);
+  border: solid 1px rgba(0, 0, 0, 0.2);
   background-color: white;
   border-radius: 20px;
 
@@ -51,66 +70,75 @@
   position: relative;
 
   img {
-    width: 54px;
-    height: 54px;
-    object-fit: contain;
+    width: 44px;
+    height: 44px;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
   }
 }
 
 .delete-thread {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
+  top: 4px;
+  right: 4px;
+  padding: 4px;
+  border-radius: 8px;
+  background-color: rgba(200, 0, 0, 0.4);
   cursor: pointer;
-  border-radius: 30px;
-  padding: 2px;
-  font-size: 12px;
+  transition: 75ms ease-in-out;
+
   &:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(200, 0, 0, 0.6);
   }
 }
 
 .thread-content {
   position: relative;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: flex-start;
   padding-left: 16px;
-  font-size: 18px;
-  p {
-    font-size: 12px;
-  }
+}
+
+.thread-text {
+  font-size: 14px;
+  width: 95%;
+}
+
+.thread-name {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 4px;
 
   h3 {
-    margin-bottom: 5px;
+    margin: 0px;
     font-size: 14px;
     font-weight: bold;
+    cursor: pointer;
 
-    span {
-      margin-left: 24px;
-      font-size: 12px;
-      font-weight: 300;
+    &:hover {
+      text-decoration: underline;
     }
   }
+}
 
-  .thread-text {
-    font-size: 14px;
-  }
+.thread-span {
+  font-size: 12px;
+  font-weight: 300;
 }
 
 .answers {
   margin-left: 54px;
-  margin-top: 24px;
+  margin-top: 16px;
   display: flex;
+  align-items: center;
 
   img {
     width: 24px;
     height: 24px;
-    object-fit: contain;
-    border-radius: 25%;
+    object-fit: cover;
+    border-radius: 8px;
   }
 
   a {
@@ -119,14 +147,23 @@
   }
 }
 
+
+
+
+
+
+
+
+
 .thread-position {
   width: 300px;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
   position: absolute;
   top: 0px;
   right: -300px;
   bottom: 0px;
   transition: 75ms ease-in-out;
+  border-left: solid 1px rgba(0, 0, 0, 0.2);
 }
 
 .thread-content-position {
@@ -137,15 +174,30 @@
 }
 
 .thread-comment-header {
-  height: 50px;
+  height: 49px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-inline: 16px;
-  border-block: solid 1px rgba(0, 0, 0, 0.1);
+  border-top: solid 1px rgba(0, 0, 0, 0.2);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
   h2 {
     margin: 0px;
+  }
+}
+
+.close-thread-comment {
+  width: 32px;
+  height: 32px;
+  border-radius: 32px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    background-color: rgb(235, 235, 235);
   }
 }
 
@@ -158,17 +210,28 @@
   scroll-behavior: smooth;
 }
 
+.thread-open-name {
+  display: flex;
+  align-items: center;
+}
+
 .comment {
   display: flex;
+  flex-direction: column;
   padding-block: 16px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
   img {
     width: 32px;
     height: 32px;
+    border-radius: 8px;
   }
 
   div {
-    display: flex;
-    flex-direction: column;
+    gap: 8px;
+  }
+
+  &:hover {
+    background-color: rgb(235, 235, 235);
   }
 }
