--- a/src/app/text-box/text-box.component.scss
+++ b/src/app/text-box/text-box.component.scss
@@ -1,7 +1,9 @@
 .text-box-container {
     width: 100%;
-    background-color: rgb(30, 30, 30);
-    color: #b7b8b9;
+    // background-color: rgb(30, 30, 30);
+    // color: #b7b8b9;
+    background-color: rgb(250, 250, 250);
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,14 +30,19 @@ button {
     outline: none;
     border: none;
     background-color: #007a5a !important;
+    filter: brightness(1.3);
     min-width: unset!important;
     padding: 0 12px!important;
     &:hover {
-        filter: brightness(1.2);
+        transform: scale(0.95);
+    }
+    &:active {
+        transform: scale(0.9);
     }
     &:disabled {
         background-color: unset;
         cursor: not-allowed;
+        filter: brightness(0.8);
     }
     mat-icon {
         color: #b7b8b9;
