merge-bug with text save fixed

--- a/src/app/create-direct-message/create-direct-message.component.html
+++ b/src/app/create-direct-message/create-direct-message.component.html
@@ -32,7 +32,7 @@
 </div>
 </div>
 <div class="write-cont">
-    <app-text-box #messagetext  (keyup.enter)="saveMessage()"></app-text-box>
+    <app-text-box #messagetext  (myEvent)="saveMessage()"></app-text-box>
 
 </div>
 </div>
