--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,5 @@
 /* HEADER */
 
-
 .toolbar-cont {
   top: 0;
   left: 0;
@@ -61,7 +60,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid gray;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   overflow: hidden;
 
   img {
@@ -92,8 +91,7 @@ input {
 }
 
 h2 {
-  border-top: solid 1px #6E446F;
-  border-bottom: solid 1px #6E446F;
+  border-block: solid 1px #6E446F;
   margin: 0px;
   padding: 8px 16px;
   display: flex;
@@ -182,6 +180,30 @@ h2 {
 
   &:hover {
     background-color: rgb(250, 250, 250);
+  }
+}
 
+.dark-theme {
+  color: white;
+  background-color: rgb(30, 30, 30);
+  border-color: rgba(255, 255, 255, 0.2);
+}
+
+.dark-theme-2 {
+  color: white;
+  background-color: rgb(50, 50, 50);
+  border-color: rgba(255, 255, 255, 0.2);
+
+  &:focus {
+    background-color: rgb(90, 90, 90);
+  }
+
+  .dark-theme-sidecont {
+    color: white;
+    background-color: rgb(30, 30, 30);
+
+    &:hover {
+      background-color: rgb(50, 50, 50);
+    }
   }
 }
