Dark Mode added

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,7 +15,7 @@
         <button mat-menu-item (click)="logout()">Logout</button>
         <button mat-menu-item (click)="openImprint()">Impressum</button>
         <button mat-menu-item (click)="openPolicy()">Datenschutz</button>
-        <button mat-menu-item><mat-slide-toggle (click)="darkmode = !darkmode"> Darkmode </mat-slide-toggle></button>
+        <button mat-menu-item><mat-slide-toggle (click)="toggleDarkmode()"> Darkmode </mat-slide-toggle></button>
     </mat-menu>
 
 </mat-toolbar>
