--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,4 +1,4 @@
-<div class="text-box-container">
+<div class="text-box-container" [ngClass]="{'dark-theme': darkmode}">
 
   <form class="editorForm" (submit)="saveMessageToParent()">
 
