--- a/src/app/channel-content/channel-content.component.html
+++ b/src/app/channel-content/channel-content.component.html
@@ -1,7 +1,7 @@
-<div class="threadPage">
+<div class="threadPage" [ngClass]="{'dark-theme': darkmode}">
   <div class="threadsAndEditorPosition" [ngStyle]="{ width: openSide ? 'calc(100% - 300px)' : '' }">
 
-    <div class="content-header">
+    <div class="content-header" [ngClass]="{'dark-theme': darkmode}">
 
       <h2>
         # {{ channel["name"] }}
@@ -11,8 +11,9 @@
 
     <div class="allThreads">
       <div class="thread" *ngFor="let thread of threads; let i = index"
-        [style.border-top]="isDateChanged(i) ? 'solid 1px rgba(0, 0, 0, 0.2)' : ''">
-        <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'">
+        [style.border-top]="isDateChanged(i) ? 'solid 1px rgba(0, 0, 0, 0.2)' : ''"
+        [ngClass]="{'dark-theme-2': darkmode}">
+        <div class="thread-date" [style.display]="isDateChanged(i) ? '' : 'none'" [ngClass]="{'dark-theme': darkmode}">
           <b>{{ thread.dateOfThread }}</b>
         </div>
 
@@ -50,17 +51,16 @@
 
     <app-text-box (myEvent)="saveMessageToChannel()" #channeltext></app-text-box>
   </div>
-  <!-- (keyup.enter)="saveMessageToChannel()" -->
 
-  <div class="thread-position" [ngStyle]="{ right: openSide ? '0px' : '' }">
+  <div class="thread-position" [ngStyle]="{ right: openSide ? '0px' : '' }" [ngClass]="{'dark-theme': darkmode}">
     <div *ngIf="openSide" class="thread-content-position">
       <div class="thread-comment-header">
         <h2># {{ channel["name"] }}</h2>
-        <mat-icon class="close-thread-comment" (click)="openSide = false">close</mat-icon>
+        <mat-icon class="close-thread-comment" (click)="openSide = false" [ngClass]="{'dark-theme-2': darkmode}">close</mat-icon>
       </div>
 
       <div class="open-thread-comments">
-        <div class="comment" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1)">
+        <div class="comment" style="border-bottom: solid 1px rgba(0, 0, 0, 0.1)" [ngClass]="{'dark-theme-2': darkmode}">
           <img src="assets/img/{{ threads[activThreadId].authorPic }}" alt="img of thread-user" />
 
           <div class="thread-content">
@@ -78,8 +78,7 @@
 
         <div class="comment" *ngFor="
             let comment of threads[activThreadId]['comments'];
-            let i = index
-          ">
+            let i = index" [ngClass]="{'dark-theme-2': darkmode}">
           <!-- <div>{{ comment.comment }}</div> -->
           <!-- *ngIf="threads[activThreadId]['comments'] !== undefined && threads[activThreadId]['comments']>0" -->
 
