--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -15,7 +15,7 @@
 }
 
 .content-header {
-  height: 52px;
+  height: 51px;
   border-top: solid 1px rgba(0, 0, 0, 0.2);
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -40,6 +40,7 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 
   &:hover {
     background-color: rgb(235, 235, 235);
@@ -133,6 +134,7 @@
   margin-top: 16px;
   display: flex;
   align-items: center;
+  gap: 8px;
 
   img {
     width: 24px;
@@ -143,7 +145,8 @@
 
   a {
     cursor: pointer;
-    color: blue;
+    color: #0462A6;
+    font-weight: 600;
   }
 }
 
@@ -160,7 +163,7 @@
   background-color: rgb(250, 250, 250);
   position: absolute;
   top: 0px;
-  right: -300px;
+  right: -301px;
   bottom: 0px;
   transition: 75ms ease-in-out;
   border-left: solid 1px rgba(0, 0, 0, 0.2);
@@ -217,7 +220,6 @@
 
 .comment {
   display: flex;
-  flex-direction: column;
   padding-block: 16px;
   border-bottom: solid 1px rgba(0, 0, 0, 0.2);
 
@@ -233,5 +235,22 @@
 
   &:hover {
     background-color: rgb(235, 235, 235);
+  }
+}
+
+
+.dark-theme {
+  color: white;
+  background-color: rgb(50, 50, 50);
+  border-color: rgba(255, 255, 255, 0.2) !important;
+}
+
+.dark-theme-2 {
+  color: white;
+  background-color: rgb(50, 50, 50);
+  border-color: rgba(255, 255, 255, 0.2) !important;
+
+  &:hover {
+    background-color: rgb(60, 60, 60);
   }
 }
