--- a/src/app/text-box/text-box.component.scss
+++ b/src/app/text-box/text-box.component.scss
@@ -1,8 +1,7 @@
 .text-box-container {
     width: 100%;
-    // background-color: rgb(30, 30, 30);
-    // color: #b7b8b9;
     background-color: rgb(250, 250, 250);
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
     color: black;
     display: flex;
     justify-content: center;
@@ -31,21 +30,31 @@ button {
     border: none;
     background-color: #007a5a !important;
     filter: brightness(1.3);
-    min-width: unset!important;
-    padding: 0 12px!important;
+    min-width: unset !important;
+    padding: 0 12px !important;
+
     &:hover {
         transform: scale(0.95);
     }
+
     &:active {
         transform: scale(0.9);
     }
+
     &:disabled {
         background-color: unset;
         cursor: not-allowed;
         filter: brightness(0.8);
     }
+
     mat-icon {
-        color: #b7b8b9;
+        color: rgb(235, 235, 235);
         transition: all 75ms ease-in;
     }
+}
+
+.dark-theme {
+    background-color: rgb(30, 30, 30);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    color: white;
 }
