--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <div class="introduction">
         <div class="introduction-header">
             <img src="./assets/img/slack-big.svg">
-            <h1>Slack(clone)</h1>
+            <h1>Slack(clones)</h1>
         </div>
         <div class="introduction-body">
             <p>Slack(clone) brings the them together wherever you are
