--- a/src/app/channel-content/channel-content.component.scss
+++ b/src/app/channel-content/channel-content.component.scss
@@ -254,3 +254,12 @@
     background-color: rgb(60, 60, 60);
   }
 }
+
+@media screen and  (max-width: 700px){
+  .thread-position{
+    width:100%;
+    right:-101%;
+    z-index: 11;
+  }
+}
+  
