--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -15,6 +15,9 @@
     </div>
     <div class="start-screen-footer">
         <p>Do you know the new Slack(clone)?</p>
-        <p (click)="openRegistryWindow()" class="cursor-pointer underline-registry">Create a new account</p>
+        <div class="underline-effect">
+            <p (click)="openRegistryWindow()">Create a new account</p>
+            <div></div>
+        </div>
     </div>
 </div>
