--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -6,8 +6,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
     img {
         margin-right: 100px;
+
         @media (max-width: 1050px) {
             display: none;
         }
@@ -19,6 +21,7 @@
     left: 5%;
     top: 10%;
     height: 400px;
+
     @media (max-width: 1050px) {
         width: 90%;
         left: 5%;
@@ -30,21 +33,26 @@
     display: flex;
     align-items: center;
     gap: 10px;
+
     @media (max-width: 1050px) {
         width: 100%;
     }
+
     h1 {
         margin: 0;
         color: white;
         font-size: 50px;
         font-weight: 600;
+
         @media (max-width: 400px) {
             font-size: 30px;
         }
     }
+
     img {
         width: 55px;
         margin: 0px;
+
         @media (max-width: 1050px) {
             display: block;
         }
@@ -55,14 +63,17 @@
     margin-top: 50px;
     height: 150px;
     width: 500px;
+
     @media (max-width: 1050px) {
         width: 100%;
     }
+
     p {
         font-size: 40px;
         color: white;
         margin: 0;
         line-height: 120%;
+
         @media (max-width: 400px) {
             font-size: 25px;
         }
@@ -78,67 +89,89 @@
     position: absolute;
     left: 23%;
     bottom: 0;
-    @media (max-width: 1050px) {
-        left: 50%;
-        transform: translate(-50%);
-    }
+
     p {
         margin: 0;
         padding: 10px 50px 10px 50px;
         font-size: 24px;
         color: white;
+
         @media (max-width: 450px) {
             padding: 10px 30px 10px 30px;
         }
+
         @media (max-width: 350px) {
             padding: 10px 20px 10px 20px;
             font-size: 16px;
         }
     }
+
     &:hover {
         transform: scale(1.1);
         transition: all 125ms ease-in-out;
     }
+
+    @media (max-width: 1050px) {
+        left: 50%;
+        transform: translate(-50%);
+
+        &:hover {
+            transform: scale(1.1) translate(-46%);
+            transition: all 125ms ease-in-out;
+        }
+    }
 }
 
 .start-screen-footer {
+    width: 90%;
     position: absolute;
     display: flex;
+    align-items: center;
     left: 5%;
     bottom: 10%;
     gap: 20px;
+
+    @media (max-width: 1050px) {
+        left: 50%;
+        transform: translate(-50%);
+    }
+
     @media (max-width: 480px) {
         flex-direction: column;
         gap: 5px;
     }
+
     p {
+        margin-block: 0px;
         color: white;
         font-size: 16px;
     }
 }
 
-.underline-registry {
-    @media(min-width: 951px) {
+.underline-effect {
+    cursor: pointer;
+    position: relative;
+    top: 3px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+
+    p {
+        padding-bottom: 1px;
+    }
+
+    div {
         position: relative;
-    }
-}
-
-.underline-registry::after {
-    @media(min-width: 951px) {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 0;
-        height: 4px;
+        right: 100%;
+        height: 3px;
         background-color: #33D375;
-        z-index: 2;
-        transition: width 0.2s;
+        border-radius: 3px;
+        transition: ease-in-out 125ms;
     }
-}
 
-.underline-registry:hover::after {
-    @media(min-width: 951px) {
-        width: 66.66%;
+    &:hover {
+        div {
+            right: 30%;
+        }
     }
 }
